# pdf-tools

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  compose.local.yml  compose.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  github_actions_security.yml
apps/backend/: README.md  requirements.txt
apps/backend/app/: __init__.py  main.py
apps/backend/app/auth/: __init__.py  dependencies.py  models.py  routes.py  service.py  store.py
apps/backend/tests/: test_auth.py
apps/frontend/: .gitignore  Dockerfile  README.md  index.html  next.config.js  nginx.conf  package-lock.json  package.json  vite.config.ts
apps/frontend/app/: globals.css  layout.tsx  page.tsx
apps/frontend/src/components/pdf-tools/: OperationComplete.tsx
apps/frontend/src/hooks/: use-pdf-operations.ts
apps/frontend/src/pages/tools/: CompressPDF.tsx  SplitPDF.tsx
apps/frontend/src/services/: api.ts
deploy/: docker-compose.dev.yml  docker-compose.prod.yml
deploy/nginx/: frontend-site.conf  local.conf  pdfspoint.conf
docker/: backend.Dockerfile  frontend.Dockerfile
intellipdf/: __init__.py
intellipdf/compress/: __init__.py  compressor.py  optimizers.py
intellipdf/merge/: exceptions.py  merger.py  utils.py  validators.py
intellipdf/split/: exceptions.py  manifest.py  splitter.py  utils.py
pdf-splitter-cli/: .coverage  API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  FINAL_SUMMARY.md  LICENSE  MANIFEST.in  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.py
pdf-splitter-cli/examples/: api_usage.py
pdf-splitter-cli/pdf_splitter/: __init__.py  cli.py  document.py  exceptions.py  manifest.py  splitter.py  types.py  utils.py
pdf-splitter-cli/pdf_splitter/backends/: __init__.py  base.py  pypdf_backend.py
pdf-splitter-cli/pdfsplitx/: pyproject.toml
pdf-splitter-cli/pdfsplitx/pdfsplitx/: __init__.py  validators.py
pdf-splitter-cli/pdfsplitx/tests/: conftest.py
pdf-splitter-cli/tests/: test_integration.py  test_splitter.py
pdf2docxplus/: __init__.py  converter.py  exceptions.py  metadata.py  utils.py  validators.py
pdf2docxplus/tests/: conftest.py  test_converter.py  test_metadata.py  test_utils.py
pdfcompressx/: README.md  __init__.py  compressor.py  exceptions.py  info.py  optimizers.py  pyproject.toml  utils.py  validators.py
pdfcompressx/pdfcompressx/: __init__.py  compressor.py  exceptions.py  info.py  optimizers.py  utils.py  validators.py
pdfcompressx/tests/: test_compressor.py  test_info.py
pdfmergex/: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  exceptions.py  merger.py  optimizers.py  pyproject.toml  utils.py  validators.py
pdfmergex/.github/workflows/: ci.yml
pdfmergex/pdfmergex/: __init__.py  exceptions.py  merger.py  optimizers.py  utils.py  validators.py
pdfmergex/tests/: conftest.py  test_merger.py  test_optimizers.py  test_validators.py
pdfsplitx/: __init__.py  exceptions.py  optimizers.py  splitter.py  types.py  utils.py  validators.py
tests/: conftest.py  test_backend_app.py  test_backend_pdf_to_docx_pipeline.py  test_compress.py  test_intellipdf_imports.py  test_merge.py  test_pdf2docx.py  test_pdf2docx_packaging.py  test_security.py  test_splitter.py
tests/compressor/: test_plugin.py
tests/converter/: test_plugin.py
tests/core/: test_parser.py
tests/encryptor/: test_plugin.py
tests/merger/: test_plugin.py
tests/splitter/: test_plugin.py
