[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "intellipdf"
version = "0.1.0"
description = "Unified PDF toolkit with split, merge, and compression utilities"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "IntelliPDF Contributors"}]
keywords = ["pdf", "split", "merge", "compress", "pypdf", "document-processing"]
dependencies = [
    "pypdf>=4.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.urls]
Homepage = "https://github.com/yourusername/intellipdf"
Repository = "https://github.com/yourusername/intellipdf"
Documentation = "https://github.com/yourusername/intellipdf#readme"

[tool.hatch.build.targets.wheel]
packages = ["packages/intellipdf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-vv --cov=intellipdf --cov-report=term-missing --cov-fail-under=90"
pythonpath = ["packages"]

[tool.coverage.run]
source = ["packages/intellipdf"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
