[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "pdfsplitx"
version = "0.1.0"
description = "Lightweight PDF page splitting and extraction utilities"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "pdfsplitx Contributors"}]
keywords = ["pdf", "split", "pypdf", "document-processing"]
dependencies = [
    "pypdf>=4.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.urls]
Homepage = "https://github.com/yourusername/pdfsplitx"
Repository = "https://github.com/yourusername/pdfsplitx"
Documentation = "https://github.com/yourusername/pdfsplitx#readme"

[tool.hatch.build.targets.wheel]
packages = ["pdfsplitx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-vv --cov=pdfsplitx --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["pdfsplitx"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
